css/styles.css
body {
  color: #434455;
  font-family: "Roboto", sans-serif;
  background-color: #ffffff;
}
img {
  display: block;
}
ul,
ol {
  list-style: none;
  padding-left: 0;
  margin: 0;
}

.container {
  margin: 0 auto;
  padding: 0 15px 0 15px;
  width: 1158px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;

  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* Header */
header.header {
  box-shadow:
    0px 2px 1px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 1px 6px rgba(46, 47, 66, 0.08);
  border-bottom: 1px solid #e7e9fc;
}
.header-container {
  display: flex;
}
.header-nav {
  display: flex;
  align-items: center;
}

.logo-link {
  position: relative;

  margin-right: 76px;

  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
}
.logo-studio {
  color: #2e2f42;
}

.header-menu {
  display: flex;
  gap: 40px;
}

.header-list-link {
  position: relative;
  padding: 24px 0 24px;

  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #404bbf;

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.header-list-link:hover {
  color: #404bbf;
}
.header-list-link:focus {
  color: #404bbf;
}
.header-list-link::after {
  content: "";
  width: 100%;
  position: absolute;
  left: 0;
  bottom: -1px;
  height: 4px;
  background-color: #404bbf;
  border-radius: 2px;
}

.header-address {
  display: flex;
  font-style: normal;
}
.header-address-list {
  display: flex;
  gap: 40px;
}

.header-address-link {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.header-address-link:hover {
  color: #404bbf;
}
.header-address-link:focus {
  color: #404bbf;
}

/* Section 1 */

.hero-section {
  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url(../images/people-office.jpg);

  max-width: 1440px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-color: #2e2f42;

  padding: 188px 0 188px;
}
.hero-text {
  max-width: 496px;

  font-size: 56px;
  line-height: 1.07;
  text-align: center;
  letter-spacing: 0.02em;
  color: #ffffff;
}
.hero-button {
  display: block;
  min-width: 169px;
  height: 56px;

  border: none;
  border-radius: 4px;
  background-color: #4d5ae5;
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #ffffff;
  cursor: pointer;

  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.hero-button:hover {
  background-color: #404bbf;
}
.hero-button:focus {
  background-color: #404bbf;
}

/* Section 2 */

.content-section {
  padding: 120px 0 120px;
}
.content-section-list {
  display: flex;
  gap: 24px;
}
.section-two-list-item {
  flex-basis: calc((100% - 72px) / 4);
}

.list-item-icon-container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 112px;
  background-color: #f4f4fd;
  border-radius: 4px;
  border: 1px solid #8e8f99;
  margin-bottom: 8px;
}

.content-header {
  margin-bottom: 8px;

  background-color: #ffffff;
  font-weight: 500;
  text-align: center;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;

  border-radius: 0px 0px 4px 4px;
}

.content-description {
  text-align: center;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

/* Section 3 */

.section-team {
  background-color: #f4f4fd;
  padding: 120px 0 120px;
}
.section-team-header {
  margin-bottom: 72px;
  font-size: 36px;
  line-height: 1.11;
  text-align: center;
  letter-spacing: 0.02em;
  text-transform: capitalize;
  color: #2e2f42;
}
.team-header {
  margin-bottom: 72px;
}
.team-list {
  display: flex;
  gap: 24px;
}
.team-description {
  padding: 32px 0;
}
.content-section-list-item {
  box-shadow:
    0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 2px 1px rgba(46, 47, 66, 0.08);
}
.sausages-list {
  display: flex;
  justify-content: center;
  gap: 24px;
}
.sausage-slice {
  width: 40px;
  height: 40px;
}
.sausage-link {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #4d5ae5;

  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.sausage-link:hover {
  background-color: #404bbf;
}
.sausage-link:focus {
  background-color: #404bbf;
}
.sausage-icon {
  fill: #f4f4fd;
}

/* Section 4 */

.section-portfolio {
  padding: 120px 0 120px 0;
}
.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  column-gap: 24px;
  row-gap: 48px;
}
.portfolio-content-header {
  flex-basis: calc((100% - 48px) / 3);
  box-shadow:
    0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 2px 1px rgba(46, 47, 66, 0.08);
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.portfolio-content-header:hover {
  transform: translateY(0%);
}
.portfolio-image {
  position: relative;
  overflow: hidden;
}
.portfolio-back-description {
  position: absolute;

  top: 0;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: в який записана css змінна зі значенням #f4f4fd;
  padding: 40px 32px;
  background-color: #4d5ae5;
  height: 100%;
  width: 100%;
  transform: translateY(100%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-content {
  padding: 32px 16px;
  border: 1px solid #e7e9fc;
  border-top: none;
  margin-bottom: 8px;
}

/* Footer */

.footer {
  padding: 100px 0;
  background-color: #2e2f42;
}
.footer-logo {
  margin-right: 120px;
}
.footer-container {
  display: flex;
  align-items: baseline;
}
.footer-description {
  max-width: 264px;

  line-height: 1.5;
  color: #f4f4fd;
  letter-spacing: 0.02em;
}
footer > div.container > .logo-link {
  display: inline-block;
  margin-bottom: 16px;
}
.footer-logo-studio {
  color: #f4f4fd;
}
.social-header {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #ffffff;
  margin-bottom: 16px;
}
.footer-socials {
  display: flex;
  gap: 16px;
}
.footer-social-item {
  width: 40px;
  height: 40px;
  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.footer-social-link {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 100%;
  height: 100%;

  background-color: #4d5ae5;
  border-radius: 50%;
}
.footer-social-link:hover,
.footer-social-link:focus {
  background-color: #31d0aa;
}
.footer-social-icon {
  fill: #f4f4fd;
}

